--- a/main.css
+++ b/main.css
@@ -1,6 +1,3 @@
-@import "reset.css";
-@import "normalize.css";
-
 }
 @-ms-viewport{
   width: device-width;
@@ -20,11 +17,10 @@
     min-height: 300px;
     }
     }
-
-
+}
 body {
  background: green;
- background: url("http://fc04.deviantart.net/fs45/i/2011/026/5/6/texture_121_by_sirius_sdz-d22428i.jpg");
+ background-image: url("http://forums.artrage.com/attachment.php?attachmentid=68555&d=1342012702");
  background-size: auto;
  background-repeat: no-repeat;
     background-attachment: fixed;
@@ -35,8 +31,59 @@ body {
         background-size: cover;
 }
 
-div {
+.three {
     height: 200px;
+    width: 400px;
+    background: transparent;
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: 10px;
+    margin-left: -200px;
+    color: black;    
+    font-family: 'Oxygen', sans-serif;
+}
+
+div.two {
+    height: 200px;
+    width: 400px;
+    background: transparent;
+    color: black;
+    padding: 300px;
+    font-family: 'Oxygen', sans-serif;
+}
+.3 {
+    height: 200px;
+    width: 400px;
+    background: transparent;
+
+    position: fixed;
+    top: 325px;
+    left: 1000px;
+    bottom: 300px;
+    color: black;
+    font-family: 'Oxygen', sans-serif;
+}
+.2 {
+    height: 500px;
+    width: 70px;
+    background: transparent;
+
+    position: fixed;
+    top: 325px;
+    left: 50%;
+    bottom: 300px;
+    margin-top: -100px;
+    margin-left: -200px;
+    color: black;
+    font-family: 'Oxygen', sans-serif;
+}
+.jo {
+	text-align:center 
+   color: black;
+    font-family: 'Oxygen', sans-serif;	
+     height: 200px;
     width: 400px;
     background: transparent;
 
@@ -45,28 +92,14 @@ div {
     left: 50%;
     margin-top: -100px;
     margin-left: -200px;
-    color: black;
-    font-family: 'Oxygen', sans-serif;
-}
-
-div2 {
-    height: 200px;
-    width: 400px;
-    background: transparent;
-    color: black;
-    font-family: 'Oxygen', sans-serif;
-}
-.jo {
-	text-align:center 
-
-	
 }
 
 .jordan {
   width: 300px;
-    padding: 25px;
+    padding: 35px;
     border: 5px transparent;
-    margin: 25px;
+    margin: 35px;
+    font-size: 20px;
 }
 
 .ja {
@@ -142,19 +175,19 @@ a.button:active {
 }
 
 #center {
-  width: 370px;
+  width: 290px;
   display: block;
   position: absolute;
   margin: auto;
-  top: 0;
+  top: 20px;
   right: 0;
   left: 0;
-  bottom: 50px;
+  bottom: 5px;
   padding: 0;
   height: 43px;
 }
 #center2 {
-  width: 560px;
+  width: 310px;
   display: block;
   position: absolute;
   margin: auto;
@@ -167,9 +200,50 @@ a.button:active {
 }
 .border {
   border-color: transparent; 
-   height: 105px;
+   height: 200px;
    border: 4px;
-    padding: 50px;
+    padding: 80px;
     font-size: 25px;
+    width: 1200px;
 
+}
+#center3 {
+  width: 310px;
+  display: block;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 550px;
+  padding: 0;
+  height: 20px;
+}
+img {
+     border: 0 none;
+     max-width: 100%;
+     vertical-align: middle;
+     size: custom;
+}
+.item{
+  align: center;
+  position: center;
+}
+h2{
+  padding: 40px;
+  bottom: 500px;
+  top: 400px;
+}
+#carousel-example-generic{
+  width: 400px;
+  height: 267px;
+}
+.carousel-inner {
+     border: 0 none;
+     max-width: 100%;
+     vertical-align: middle;
+     size: custom;
+}
+#carousel-example-generic.full-width {
+  width: 100%;
 }
