Carousel resizing fixed, buttons fixed

--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-}
 @-ms-viewport{
   width: device-width;
 }
@@ -7,7 +6,7 @@
     width: 100%;
     height: auto;
 
-    }
+  }
     }
 
     @media (max-width: 470px) {
@@ -15,12 +14,11 @@
     max-width:300%;
     width:150%;
     min-height: 300px;
+  }
     }
-    }
-}
 body {
  background: green;
- background-image: url("http://forums.artrage.com/attachment.php?attachmentid=68555&d=1342012702");
+ background-image: url("http://www.hiwallpaperson.com/wp-content/uploads/2015/05/geometric-abstract-wallpapers.jpg");
  background-size: auto;
  background-repeat: no-repeat;
     background-attachment: fixed;
@@ -35,14 +33,17 @@ body {
     height: 200px;
     width: 400px;
     background: transparent;
-
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     margin-top: 10px;
     margin-left: -200px;
     color: black;    
     font-family: 'Oxygen', sans-serif;
+     -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
 }
 
 div.two {
@@ -161,6 +162,10 @@ a.button {
   letter-spacing: 1px;
   -webkit-transition: all 300ms;
   float: left;
+    -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
 }
 a.button:hover {
   background: rgba(0,0,0,.5);
@@ -174,37 +179,73 @@ a.button:active {
   box-shadow: inset 0 1px 1px rgba(0,0,0,.2), 0 1px 1px rgba(0,0,0,.2);
 }
 
-#center {
+#center4 {
   width: 290px;
   display: block;
   position: absolute;
   margin: auto;
-  top: 20px;
+  top: 105px;
   right: 0;
   left: 0;
   bottom: 5px;
   padding: 0;
   height: 43px;
 }
+.borders{
+    border-style: solid;
+  border-width: 5px;
+  border-color:black;
+  margin: 10px;
+    padding: 30px;
+    font-family: 'Oxygen', sans-serif;
+}
+.box{
+  border-style: solid;
+  border-width: 5px;
+  border-color:black;
+  margin: 10px;
+    padding: 30px;
+}
+.but {
+  padding: 20px;
+  margin: 70px;
+}
 #center2 {
   width: 310px;
   display: block;
   position: absolute;
   margin: auto;
-  top: 0;
   right: 0;
   left: 0;
-  bottom: 550px;
-  padding: 0;
-  height: 20px;
 }
 .border {
   border-color: transparent; 
-   height: 200px;
-   border: 4px;
-    padding: 80px;
-    font-size: 25px;
-    width: 1200px;
+   height: 100%;
+    width: 350px;
+    margin: 100px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    font-size: 14px;
+    bottom: 700px;
+    font-family: 'Oxygen', sans-serif;
+
+}
+.justify {
+    text-align:justify;
+    text-justify:inter-word;
+}
+.border2 {
+  border-color: transparent; 
+   height: 100%;
+    width: 380px;
+    margin: 130px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    font-size: 14px;
+    bottom: 700px;
+    font-family: 'Oxygen', sans-serif;
 
 }
 #center3 {
@@ -212,12 +253,8 @@ a.button:active {
   display: block;
   position: absolute;
   margin: auto;
-  top: 0;
   right: 0;
   left: 0;
-  bottom: 550px;
-  padding: 0;
-  height: 20px;
 }
 img {
      border: 0 none;
@@ -235,15 +272,38 @@ h2{
   top: 400px;
 }
 #carousel-example-generic{
-  width: 400px;
-  height: 267px;
+  width: 600px;
+  position: center;
+  border-color: black;
+  margin-left: auto;
+  margin-right: auto; 
+   border: 0 none;
+     max-width: 100%;
+     vertical-align: middle;
+     size: custom;
 }
 .carousel-inner {
-     border: 0 none;
+        border: 0 none;
      max-width: 100%;
      vertical-align: middle;
      size: custom;
 }
 #carousel-example-generic.full-width {
   width: 100%;
+}
+.ink {
+   font-family: 'Oxygen', sans-serif;
+   margin: 35px;
+}
+.send {
+  margin-left: 20px;
+}
+hr {
+  color: black;
+}
+.container2{
+  border-color: black;
+    font-family: 'Oxygen', sans-serif;
+    font-size: 15px;
+    color: black;
 }
